k8s/istio/virtual-service-product-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry
  namespace: dev
spec:
  hosts:
    - product
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,reset"
      route:
        - destination:
            host: product
            port:
              number: 8080
