k8s/istio/virtual-service-tax-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tax-retry
  namespace: dev
spec:
  hosts:
    - tax
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,reset"
      route:
        - destination:
            host: tax
            port:
              number: 80
